--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^12.2.14",
     "core-js": "^2.6.12",
     "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -45,6 +46,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~3.0.4",
     "tslint": "~6.1.0",
-    "typescript": "^4.1.6"
+    "typescript": "^4.3.5"
   }
 }
