--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -13,5 +13,11 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Mirror
-        run: git push --mirror git@github.com:mprencipe/digitraffic-rail-history-test
-
+        run: |
+          git config --global user.name Digitraffic
+          git config --global user.email digitraffic@fintraffic.fi
+          rm -rf .git .github
+          git init
+          git add .
+          git commit -m "Digitraffic rail history"
+          git push --mirror git@github.com:mprencipe/digitraffic-rail-history-test
