DPO-1797 Run only if secret exists

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,7 +1,8 @@
 name: 'Mirror repo to public'
 on: [push]
 jobs:
-  build:
+  mirror:
+    if: ${{ secrets.SSH_PRIVATE_KEY != ''}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
