--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,12 +1,19 @@
 name: 'Mirror repo to public'
-
-env:
-  secret: ${{ secrets.SSH_PRIVATE_KEY }}
-
 on: [push]
 jobs:
+  check-secret:
+    runs-on: ubuntu-latest
+    outputs:
+      ssh-key: ${{ steps.ssh-key.outputs.defined }}
+    steps:
+      - id: ssh-key
+        env:
+          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        if: "${{ env.SSH_KEY != '' }}"
+        run: echo "::set-output name=defined::true"
   mirror:
-    if: ${{ env.secret != '' }}
+    needs: [ check-secret ]
+    if: needs.check-secret.outputs.ssh-key == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
