--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,11 @@ jobs:
           cd train-history-updater
           mvn install -DskipTests=true
           cd ..
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-without-markdown
+          path: |
+            train-history-web/train-history-web.tar
+            train-history-backend/target/train-history-backend-0.0.1-SNAPSHOT.jar
+            train-history-updater/target/train-history-updater-0.0.1-SNAPSHOT.jar
