--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,22 @@ jobs:
           cd train-history-updater
           mvn install -DskipTests=true
           cd ..
-      - name: Archive artifacts
+      - name: Archive web artifact
         uses: actions/upload-artifact@v3
         with:
-          name: train-history
+          name: train-history-web
           path: |
-            ./*/train-history-web.tar
-            ./*/train-history-backend-0.0.1-SNAPSHOT.jar
-            ./*/train-history-updater-0.0.1-SNAPSHOT.jar
+            train-history-web/*/train-history-web.tar
+      - name: Archive backend artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: train-history-backend
+          path: |
+            train-history-backend/target/*/train-history-backend-0.0.1-SNAPSHOT.jar
+      - name: Archive backend artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: train-history-updater
+          path: |
+            train-history-updater/target/*/train-history-updater-0.0.1-SNAPSHOT.jar
+
