--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,19 +30,18 @@ jobs:
       - name: Archive web artifact
         uses: actions/upload-artifact@v3
         with:
-          name: train-history-web
+          name: train-history-web-${{github.run_number}}
           path: |
             train-history-web/train-history-web.tar
       - name: Archive backend artifact
         uses: actions/upload-artifact@v3
         with:
-          name: train-history-backend
+          name: train-history-backend-${{github.run_number}}
           path: |
             train-history-backend/target/train-history-backend-0.0.1-SNAPSHOT.jar
       - name: Archive backend artifact
         uses: actions/upload-artifact@v3
         with:
-          name: train-history-updater
+          name: train-history-updater-${{github.run_number}}
           path: |
             train-history-updater/target/train-history-updater-0.0.1-SNAPSHOT.jar
-
