--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 on: [push]
 jobs:
-  build:
+  build_artifacts:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -30,18 +30,38 @@ jobs:
       - name: Archive web artifact
         uses: actions/upload-artifact@v3
         with:
-          name: train-history-web-${{github.run_number}}
+          name: train-history-web
           path: |
             train-history-web/train-history-web.tar
       - name: Archive backend artifact
         uses: actions/upload-artifact@v3
         with:
-          name: train-history-backend-${{github.run_number}}
+          name: train-history-backend
           path: |
             train-history-backend/target/train-history-backend-0.0.1-SNAPSHOT.jar
       - name: Archive backend artifact
         uses: actions/upload-artifact@v3
         with:
-          name: train-history-updater-${{github.run_number}}
+          name: train-history-updater
           path: |
             train-history-updater/target/train-history-updater-0.0.1-SNAPSHOT.jar
+  build_image:
+    runs-on: ubuntu-latest
+    needs: [ build_artifacts ]
+    steps:
+      - name: Download frontend
+        uses: actions/download-artifact@v3
+        with:
+          name: train-history-web
+      - name: Download backend
+        uses: actions/download-artifact@v3
+        with:
+          name: train-history-backend
+      - name: Download updater
+        uses: actions/download-artifact@v3
+        with:
+          name: train-history-updater
+      - name: Extract artifacts
+        run: |
+          unzip train-history-web.zip
+          ls
