--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,19 +1,7 @@
 name: 'Mirror repo to public'
 on: [push]
 jobs:
-  check-secret:
-    runs-on: ubuntu-latest
-    outputs:
-      ssh-key: ${{ steps.ssh-key.outputs.defined }}
-    steps:
-      - id: ssh-key
-        env:
-          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        if: "${{ env.SSH_KEY != '' }}"
-        run: echo "::set-output name=defined::true"
   mirror:
-    needs: [ check-secret ]
-    if: needs.check-secret.outputs.ssh-key == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -23,7 +11,7 @@ jobs:
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.5.4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.MIRROR_SSH_PRIVATE_KEY }}
       - name: Mirror
         run: |
           git push --mirror git@github.com:tmfg/digitraffic-rail-history
