--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,14 @@
 name: Build
-on: [push]
+on:
+  workflow_dispatch:
+    inputs:
+      env:
+        description: 'Environment'
+        required: true
+        type: choice
+        options:
+          - beta
+          - prod
 jobs:
   build_artifacts:
     runs-on: ubuntu-latest
@@ -10,6 +19,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
+      - name: Checkout config repo
+        run: |
+          git clone ${{ secrets.CONFIG_REPO_URL }} config
       - name: Build frontend
         run: |
           cd train-history-web
@@ -17,55 +33,9 @@ jobs:
           npx ng build --base-href /history/
           tar -czvf train-history-web.tar dist nginx.conf
           cd ..
-      - name: Build backend
-        run: |
-          cd train-history-backend
-          mvn install -DskipTests=true
-          cd ..
-      - name: Build updater
-        run: |
-          cd train-history-updater
-          mvn install -DskipTests=true
-          cd ..
-      - name: Archive web artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: train-history-web
-          path: |
-            train-history-web/train-history-web.tar
-      - name: Archive backend artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: train-history-backend
-          path: |
-            train-history-backend/target/train-history-backend-0.0.1-SNAPSHOT.jar
-      - name: Archive backend artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: train-history-updater
-          path: |
-            train-history-updater/target/train-history-updater-0.0.1-SNAPSHOT.jar
-  build_image:
-    runs-on: ubuntu-latest
-    needs: [ build_artifacts ]
-    steps:
-      - name: Download frontend
-        uses: actions/download-artifact@v3
-        with:
-          name: train-history-web
-      - name: Download backend
-        uses: actions/download-artifact@v3
-        with:
-          name: train-history-backend
-      - name: Download updater
-        uses: actions/download-artifact@v3
-        with:
-          name: train-history-updater
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
-      - name: Checkout config repo
-        run: |
-          git clone ${{ secrets.CONFIG_REPO_URL }}
-          ls
+          docker build --no-cache \
+            --build-arg ENV=${{ github.event.inputs.env }} \
+            --build-arg APP_FILE=train-history-web/train-history-web.tar \
+            --build-arg PROPERTY_FILE=config/conf/train-history-web-${{ github.event.inputs.env }}.properties \
+            -t ${{ github.event.inputs.app == 'beta' && secrets.ECR_URL_BETA || secrets.ECR_URL_PROD }} \
+            --pull=true --file=config/aws/Dockerfile-rail-train-history-web config/aws
