--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
           ls train-history-web/train-history-web.tar
           docker build --no-cache \
             --build-arg ENV=${{ github.event.inputs.env }} \
-            --build-arg APP_FILE=$(pwd)/train-history-web/train-history-web.tar \
-            --build-arg PROPERTY_FILE=$(pwd)/config/conf/train-history-web-${{ github.event.inputs.env }}.properties \
+            --build-arg APP_FILE=train-history-web/train-history-web.tar \
+            --build-arg PROPERTY_FILE= config/aws/train-history-web-${{ github.event.inputs.env }}.properties \
             -t ${{ github.event.inputs.app == 'beta' && secrets.ECR_URL_BETA || secrets.ECR_URL_PROD }} \
-            --pull=true --file=$(pwd)/config/aws/Dockerfile-rail-train-history-web config/aws
+            --pull=true --file=config/aws/Dockerfile-rail-train-history-web
