--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,4 +43,4 @@ jobs:
             --build-arg ENV=${{ github.event.inputs.env }} \
             --build-arg APP_FILE=train-history-web/train-history-web.tar \
             -t ${{ github.event.inputs.app == 'beta' && secrets.ECR_URL_BETA || secrets.ECR_URL_PROD }} \
-            --pull=true --file=config/aws/Dockerfile-rail-train-history-web
+            --pull=true --file=config/aws/Dockerfile-rail-train-history-web .
