--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,10 @@ jobs:
           npm ci
           npx ng build --base-href /history/
           tar -czvf train-history-web.tar dist nginx.conf
+          cp train-history-web.tar config/aws
           docker build --no-cache \
             --build-arg ENV=${{ github.event.inputs.env }} \
             --build-arg APP_FILE=train-history-web.tar \
             -t ${{ github.event.inputs.app == 'beta' && secrets.ECR_URL_BETA || secrets.ECR_URL_PROD }} \
-            --pull=true --file=../config/aws/Dockerfile-rail-train-history-web .
+            --pull=true --file=Dockerfile-rail-train-history-web config/aws
           cd ..
