--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           npm ci
           npx ng build --base-href /history/
           tar -czvf train-history-web.tar dist nginx.conf
-          cp train-history-web.tar config/aws
+          cp train-history-web.tar ../config/aws
           docker build --no-cache \
             --build-arg ENV=${{ github.event.inputs.env }} \
             --build-arg APP_FILE=train-history-web.tar \
