--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
             --build-arg ENV=${{ github.event.inputs.env }} \
             --build-arg APP_FILE=train-history-web.tar \
             -t ${{ github.event.inputs.app == 'beta' && secrets.ECR_URL_BETA || secrets.ECR_URL_PROD }} \
-            --pull=true --file=Dockerfile-rail-train-history-web config/aws
+            --pull=true --file=Dockerfile-rail-train-history-web .
