DPO-1817 Set env

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    environment: ${{ github.event.inputs.env }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
