--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,6 @@ jobs:
           docker build --no-cache \
             --build-arg ENV=${{ github.event.inputs.env }} \
             --build-arg APP_FILE=train-history-web.tar \
-            -t ${{ github.event.inputs.app == 'beta' && secrets.ECR_URL_BETA || secrets.ECR_URL_PROD }}/train-history-web:${GITHUB_SHA} \
+            -t ${{ secrets.ECR_URL }}/train-history-web:${GITHUB_SHA} \
             --pull=true --file=Dockerfile-rail-train-history-web .
-          docker push ${{ github.event.inputs.app == 'beta' && secrets.ECR_URL_BETA || secrets.ECR_URL_PROD }}/train-history-web:${GITHUB_SHA}
+          docker push ${{ secrets.ECR_URL }}/train-history-web:${GITHUB_SHA}
