--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,17 +1,14 @@
 name: 'Mirror repo to public'
-on: [push]
+on:
+  push:
+    branches:
+      - master
 jobs:
-  mirror:
+  mirror-action:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: mirror
+        uses: tmfg/digitraffic-actions@mirror/v1
         with:
-          fetch-depth: 0
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
+          mirror-repo: git@github.com:tmfg/digitraffic-rail-history
           ssh-private-key: ${{ secrets.MIRROR_SSH_PRIVATE_KEY }}
-      - name: Mirror
-        run: |
-          git push --mirror git@github.com:tmfg/digitraffic-rail-history
