DPO-1817 Also job name

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -10,7 +10,7 @@ on:
           - beta
           - prod
 jobs:
-  build_artifacts:
+  install:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
