--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -83,3 +83,7 @@ jobs:
         uses: rtcamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_ICON_EMOJI: ':github:'
+          SLACK_TITLE: Rail-history install failed
+          SLACK_FOOTER: ''
