DPO-1817 Configure slack webhook

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -87,3 +87,4 @@ jobs:
           SLACK_ICON_EMOJI: ':github:'
           SLACK_TITLE: Rail-history install failed
           SLACK_FOOTER: ''
+          MSG_MINIMAL: true
