--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -80,11 +80,15 @@ jobs:
           docker push ${{ secrets.ECR_URL }}/train-history-updater:${GITHUB_SHA}
       - name: Notify Slack
         if: failure()
-        uses: rtcamp/action-slack-notify@v2
+        uses: 8398a7/action-slack@09d38354556399a0f7a8d78d617c8e61a3682b63
+        with:
+          status: ${{ job.status }}
+          custom_payload: |
+            {
+              attachments: [{
+                color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
+                text: `FAILED ${process.env.AS_WORKFLOW}\n${process.env.AS_JOB} (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}@${process.env.AS_REF} by ${process.env.AS_AUTHOR} ${{ job.status }} in ${process.env.AS_TOOK}`,
+              }]
+            }
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_ICON_EMOJI: ':github:'
-          SLACK_TITLE: Rail-history install failed
-          SLACK_FOOTER: ''
-          MSG_MINIMAL: true
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
