--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      actions: read
     environment: ${{ github.event.inputs.env }}
     steps:
       - name: Checkout
