DPO-1817 Use config repo name instead or URL

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
       actions: read
     environment: ${{ github.event.inputs.env }}
     steps:
+      - name: Set config repo name
+        run: |
+          CONFIG_REPO_NAME=$(echo ${{ secrets.CONFIG_REPO_URL }} | sed -e s/git@github.com:// -e s/\\.git//)
+          echo "CONFIG_REPO_NAME=$CONFIG_REPO_NAME" >> $GITHUB_ENV
       - name: Update task definition
         uses: tmfg/digitraffic-actions@update-task-def/v1
         with:
@@ -32,7 +36,7 @@ jobs:
           image-arn: ${{ secrets.ECR_URL }}/train-history-frontend:${{ github.event.inputs.commit-hash }}
           aws-role: ${{ secrets.AWS_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
-          ci-repo-url: ${{ secrets.CONFIG_REPO_URL }}
+          ci-repo-url: ${{ env.CONFIG_REPO_NAME }}
           ci-repo-branch: ${{ github.event.inputs.config-branch }}
           ci-ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
       - name: Notify Slack
