--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Update task definition
         uses: tmfg/digitraffic-actions@update-task-def/v1
         with:
-          config-file-name: rail-${{ github.event.inputs.env }}-train-history-web
+          task-def-file-name: rail-${{ github.event.inputs.env }}-train-history-web
           family-name: train-history-web
           image-arn: ${{ secrets.ECR_URL }}/train-history-frontend:${{ github.event.inputs.commit-hash }}
           aws-role: ${{ secrets.AWS_ROLE }}
