--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,73 +17,42 @@ on:
         required: true
         type: string
 jobs:
-  deploy:
+  set-config-repo-name:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-      actions: read
     environment: ${{ github.event.inputs.env }}
     steps:
       - name: Set config repo name
         run: |
           CONFIG_REPO_NAME=$(echo ${{ secrets.CONFIG_REPO_URL }} | sed -e s/git@github.com:// -e s/\\.git//)
           echo "CONFIG_REPO_NAME=$CONFIG_REPO_NAME" >> $GITHUB_ENV
-      - name: Update frontend task definition
+  install:
+    needs: set-config-repo-name
+    strategy:
+      matrix:
+        app: [ web, backend, updater ]
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+      actions: read
+    steps:
+      - name: Update ${{ matrix.app }} task definition
         uses: tmfg/digitraffic-actions@update-task-def/v1
         with:
-          task-def-file-name: rail-${{ github.event.inputs.env }}-train-history-web
-          family-name: train-history-web
-          image-arn: ${{ secrets.ECR_URL }}/train-history-web:${{ github.event.inputs.commit-hash }}
+          task-def-file-name: rail-${{ github.event.inputs.env }}-train-history-${{ matrix.app }}
+          family-name: train-history-${{ matrix.app }}
+          image-arn: ${{ secrets.ECR_URL }}/train-history-${{ matrix.app }}:${{ github.event.inputs.commit-hash }}
           aws-role: ${{ secrets.AWS_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
           ci-repo-url: ${{ env.CONFIG_REPO_NAME }}
           ci-repo-branch: ${{ github.event.inputs.config-branch }}
           ci-ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
-      - name: Update frontend ECS service
+      - name: Update ${{ matrix.app }} ECS service
         uses: tmfg/digitraffic-actions@ecs-service-update/v1
         with:
           aws-role: ${{ secrets.AWS_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
-          service-name: train-history-web
-          cluster-name: ${{ secrets.CLUSTER_NAME }}
-          desired-count: 1
-      - name: Update backend task definition
-        uses: tmfg/digitraffic-actions@update-task-def/v1
-        with:
-          task-def-file-name: rail-${{ github.event.inputs.env }}-train-history-backend
-          family-name: train-history-backend
-          image-arn: ${{ secrets.ECR_URL }}/train-history-backend:${{ github.event.inputs.commit-hash }}
-          aws-role: ${{ secrets.AWS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          ci-repo-url: ${{ env.CONFIG_REPO_NAME }}
-          ci-repo-branch: ${{ github.event.inputs.config-branch }}
-          ci-ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
-      - name: Update backend ECS service
-        uses: tmfg/digitraffic-actions@ecs-service-update/v1
-        with:
-          aws-role: ${{ secrets.AWS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          service-name: train-history-backend
-          cluster-name: ${{ secrets.CLUSTER_NAME }}
-          desired-count: 1
-      - name: Update updater task definition
-        uses: tmfg/digitraffic-actions@update-task-def/v1
-        with:
-          task-def-file-name: rail-${{ github.event.inputs.env }}-train-history-updater
-          family-name: train-history-updater
-          image-arn: ${{ secrets.ECR_URL }}/train-history-updater:${{ github.event.inputs.commit-hash }}
-          aws-role: ${{ secrets.AWS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          ci-repo-url: ${{ env.CONFIG_REPO_NAME }}
-          ci-repo-branch: ${{ github.event.inputs.config-branch }}
-          ci-ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
-      - name: Update updater ECS service
-        uses: tmfg/digitraffic-actions@ecs-service-update/v1
-        with:
-          aws-role: ${{ secrets.AWS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          service-name: train-history-updater
+          service-name: train-history-${{ matrix.app }}
           cluster-name: ${{ secrets.CLUSTER_NAME }}
           desired-count: 1
       - name: Notify Slack
@@ -91,7 +60,7 @@ jobs:
         uses: 8398a7/action-slack@v3
         with:
           status: failure
-          text: FAILED Rail-history Deploy
+          text: FAILED Rail-history Deploy ${{ matrix.app }}
           fields: repo, job, took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
