--- a/train-history-backend/pom.xml
+++ b/train-history-backend/pom.xml
@@ -84,6 +84,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<configuration>
+					<failBuildOnCVSS>0</failBuildOnCVSS>
+					<suppressionFile>owasp-suppressions.xml</suppressionFile>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
