DPO-1916: Dependency-check to maven-profile, one suppression file, basic dependency-check for web, updated suppressions

--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,39 @@
         <module>/train-history-updater/</module>
     </modules>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.owasp</groupId>
-                    <artifactId>dependency-check-maven</artifactId>
-                    <version>7.0.4</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+    <profiles>
+        <profile>
+            <id>depcheck</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <defaultGoal>dependency-check:aggregate</defaultGoal>
+                <plugins>
+                    <plugin>
+                        <groupId>org.owasp</groupId>
+                        <artifactId>dependency-check-maven</artifactId>
+                        <version>7.1.1</version>
+                        <configuration>
+                            <scanSet>
+                                <fileSet>
+                                    <directory>train-history-web</directory>
+                                    <includes>
+                                        <include>package.json</include>
+                                        <include>package-lock.json</include>
+                                    </includes>
+                                </fileSet>
+                            </scanSet>
+                            <nodePackageSkipDevDependencies>true</nodePackageSkipDevDependencies>
+                            <nodeAuditSkipDevDependencies>true</nodeAuditSkipDevDependencies>
+                            <failBuildOnCVSS>5</failBuildOnCVSS>
+                            <suppressionFile>owasp-suppressions.xml</suppressionFile>
+                            <formats>html,xml</formats>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
