--- a/.github/workflows/depency-check.yml
+++ b/.github/workflows/depency-check.yml
@@ -24,15 +24,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-dependency-check-
       - name: Dependency check
-        run: mvn dependency-check:check
+        run: mvn -Pdepcheck
       - name: Upload report
         uses: actions/upload-artifact@v3
         if: ${{ success() || failure() }}
         with:
           name: dependency-check-report.html
           path: |
-            train-history-backend/target/dependency-check-report.html
-            train-history-updater/target/dependency-check-report.html
+            target/dependency-check-report.html
       - name: Notify Slack
         if: failure()
         uses: 8398a7/action-slack@v3
