DPO-1925: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,7 @@ target/
 
 ### STS ###
 .apt_generated
-.classpath
 .factorypath
-.project
 .settings
 .springBeans
 
@@ -68,3 +66,4 @@ nbdist/
 
 /train-history-web/node_modules/
 train-history-web/.angular/cache
+application-localhost.properties
