DPO-1925 Remove SpringBootTest-annotation + enable tests during build. Database for tests has never been set up, and it won't work.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build updater
         run: |
           cd train-history-updater
-          mvn install -DskipTests=true
+          mvn install
       - name: Notify Slack
         if: failure()
         uses: 8398a7/action-slack@v3
