--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -9,6 +9,7 @@ on:
         default: 'beta'
 jobs:
   install:
+    if: github.repository != 'tmfg/digitraffic-rail-history'
     runs-on: ubuntu-latest
     permissions:
       id-token: write
