--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Build
 on: [push]
 jobs:
   build:
+    if: github.repository != 'tmfg/digitraffic-rail-history'
     runs-on: ubuntu-latest
     permissions:
       contents: read
