--- a/train-history-backend/pom.xml
+++ b/train-history-backend/pom.xml
@@ -83,6 +83,11 @@
 			<version>31.1-jre</version>
 		</dependency>
 		<dependency>
+            <groupId>com.amazonaws.secretsmanager</groupId>
+            <artifactId>aws-secretsmanager-jdbc</artifactId>
+            <version>1.0.11</version>
+        </dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-java8</artifactId>
 			<version>${hibernate.version}</version>
