--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           image-arn: ${{ secrets.ECR_URL }}/train-history-${{ matrix.app }}:${{ github.event.inputs.commit-hash }}
           aws-role: ${{ secrets.AWS_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
-          ci-repo-url: ${{ env.CONFIG_REPO_NAME }}
+          ci-repo-url: ${{ secrets.CONFIG_REPO_NAME }}
           ci-repo-branch: ${{ github.event.inputs.config-repo-branch }}
           ci-ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
       - name: Update ${{ matrix.app }} ECS service
