Add proxy config for easy development

--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "ng": "ng",
     "prettier": "pretty-quick",
-    "start": "ng serve --host 0.0.0.0",
+    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
     "test": "ng test"
   },
   "dependencies": {
