Run material migration tool

--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "scripts": {
     "build": "ng build",
+    "dev": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
     "e2e": "ng e2e",
     "lint": "ng lint",
     "ng": "ng",
     "prettier": "pretty-quick",
-    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
+    "start": "ng serve --host 0.0.0.0",
     "test": "ng test"
   },
   "dependencies": {
