--- a/train-history-web/tsconfig.json
+++ b/train-history-web/tsconfig.json
@@ -10,13 +10,8 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2016",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2016", "dom"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
