--- a/.github/workflows/depency-check.yml
+++ b/.github/workflows/depency-check.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   dependency-check:
     if: github.repository != 'tmfg/digitraffic-rail-history'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
