--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -19,7 +19,7 @@ on:
 jobs:
   install:
     if: github.repository != 'tmfg/digitraffic-rail-history'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       id-token: write
       contents: read
@@ -40,9 +40,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '16'
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_ROLE }}
           role-session-name: gh-actions-build-rail-history-${{ github.event.inputs.env }}
