Feature/dpo 1383 mysql driver (#26)
* DPO-1383 aws mysql driver

* DPO-1383 version property

* DPO-1383 fix driver version property

--- a/train-history-updater/pom.xml
+++ b/train-history-updater/pom.xml
@@ -13,13 +13,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.11</version>
+        <version>2.7.12</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <aws.msql.driver.version>1.1.7</aws.msql.driver.version>
         <java.version>11</java.version>
     </properties>
 
@@ -74,10 +75,9 @@
             <version>1.0.12</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
-            <scope>runtime</scope>
+            <groupId>software.aws.rds</groupId>
+            <artifactId>aws-mysql-jdbc</artifactId>
+            <version>${aws.msql.driver.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
