Feature/dpo 1537 java17 (#31)
* DPO-1537 java 17, spring boot 3

* DPO-1537 setup java in actions

* DPO-1537 new location for dockerfiles

* DPO-1537 update flyway

* DPO-1537 add flyway-mysql

* DPO-1537 httpclient5, bump spring boot version

* feature/DPO-1537-java17: Update development environment as well as some dependencies

* feature/DPO-1537-java17: Provide proxy file to do proxy testing

* feature/DPO-1537-java17: And the core

---------

Co-authored-by: Joonas-M-S <joonas.mikkonen@solita.fi>

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -37,6 +37,12 @@ jobs:
           ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
           ref: ${{ inputs.config-repo-branch }}
           path: config
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: corretto
+          cache: maven
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -70,7 +76,7 @@ jobs:
             --output type=docker \
             --tag ${{ secrets.ECR_URL }}/train-history-web:${GITHUB_SHA} \
             --pull=true \
-            --file=Dockerfile-rail-train-history-web .
+            --file=docker/Dockerfile-rail-train-history-web .
           
           docker push ${{ secrets.ECR_URL }}/train-history-web:${GITHUB_SHA}
       - name: Build backend
@@ -89,7 +95,7 @@ jobs:
             --output type=docker \
             --tag ${{ secrets.ECR_URL }}/train-history-backend:${GITHUB_SHA} \
             --pull=true \
-            --file=Dockerfile-rail-train-history-backend .
+            --file=docker/Dockerfile-rail-train-history-backend .
           
           docker push ${{ secrets.ECR_URL }}/train-history-backend:${GITHUB_SHA}
       - name: Build updater
@@ -107,7 +113,7 @@ jobs:
             --output type=docker \
             --tag ${{ secrets.ECR_URL }}/train-history-updater:${GITHUB_SHA} \
             --pull=true \
-            --file=Dockerfile-rail-train-history-updater .
+            --file=docker/Dockerfile-rail-train-history-updater .
           
           docker push ${{ secrets.ECR_URL }}/train-history-updater:${GITHUB_SHA}
       - name: Notify Slack
