--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   rail_history_mysql:
-    image: mysql:5.7-debian
+    image: mysql:8.0.34-debian
     restart: unless-stopped
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
@@ -17,7 +17,7 @@ services:
       - rail_history_network
 
   rail_history_flyway:
-    image: flyway/flyway:7.15-alpine
+    build: ./Flyway
     volumes:
       - "../train-history-updater/src/main/resources/db/migration:/flyway/sql"
     command: -url=jdbc:mysql://rail_history_mysql -schemas=trainhistoryjson -user=rail_history -password=rail_pass123 -connectRetries=10 migrate
