--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "ng build",
     "dev": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
+    "dev:local": "ng serve --host 0.0.0.0 --proxy-config proxy-local.conf.json",
     "e2e": "ng e2e",
     "lint": "ng lint",
     "ng": "ng",
@@ -14,17 +15,17 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "^15.2.8",
-    "@angular/cdk": "^15.2.8",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^15.2.8",
-    "@angular/core": "^15.2.8",
-    "@angular/forms": "^15.2.8",
-    "@angular/material": "^15.2.8",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
-    "@angular/platform-server": "^15.2.8",
-    "@angular/router": "^15.2.8",
+    "@angular/animations": "^16.1.6",
+    "@angular/cdk": "^16.1.6",
+    "@angular/common": "^16.1.6",
+    "@angular/compiler": "^16.1.6",
+    "@angular/core": "^16.1.6",
+    "@angular/forms": "^16.1.6",
+    "@angular/material": "^16.1.6",
+    "@angular/platform-browser": "^16.1.6",
+    "@angular/platform-browser-dynamic": "^16.1.6",
+    "@angular/platform-server": "^16.1.6",
+    "@angular/router": "^16.1.6",
     "core-js": "^3.30.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
@@ -32,10 +33,10 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular/cli": "^15.2.7",
-    "@angular/compiler-cli": "^15.2.8",
-    "@angular/language-service": "^15.2.8",
+    "@angular-devkit/build-angular": "^16.1.6",
+    "@angular/cli": "^16.1.6",
+    "@angular/compiler-cli": "^16.1.6",
+    "@angular/language-service": "^16.1.6",
     "@types/jasmine": "~4.3.1",
     "@types/node": "^18.16.2",
     "codelyzer": "^6.0.2",
@@ -53,6 +54,9 @@
     "pretty-quick": "^3.1.3",
     "protractor": "~7.0.0",
     "tslint": "~6.1.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
+  },
+  "overrides": {
+    "semver": "^7.3.5"
   }
 }
