--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -15,33 +15,33 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "^16.1.6",
-    "@angular/cdk": "^16.1.6",
-    "@angular/common": "^16.1.6",
-    "@angular/compiler": "^16.1.6",
-    "@angular/core": "^16.1.6",
-    "@angular/forms": "^16.1.6",
-    "@angular/material": "^16.1.6",
-    "@angular/platform-browser": "^16.1.6",
-    "@angular/platform-browser-dynamic": "^16.1.6",
-    "@angular/platform-server": "^16.1.6",
-    "@angular/router": "^16.1.6",
-    "core-js": "^3.30.1",
-    "rxjs": "^6.6.7",
+    "@angular/animations": "^17.0.7",
+    "@angular/cdk": "^17.0.4",
+    "@angular/common": "^17.0.7",
+    "@angular/compiler": "^17.0.7",
+    "@angular/core": "^17.0.7",
+    "@angular/forms": "^17.0.7",
+    "@angular/material": "^17.0.4",
+    "@angular/platform-browser": "^17.0.7",
+    "@angular/platform-browser-dynamic": "^17.0.7",
+    "@angular/platform-server": "^17.0.7",
+    "@angular/router": "^17.0.7",
+    "core-js": "^3.34.0",
+    "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.13.0"
+    "tslib": "^2.6.2",
+    "zone.js": "^0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.6",
-    "@angular/cli": "^16.1.6",
-    "@angular/compiler-cli": "^16.1.6",
-    "@angular/language-service": "^16.1.6",
-    "@types/jasmine": "~4.3.1",
+    "@angular-devkit/build-angular": "^17.0.7",
+    "@angular/cli": "^17.0.7",
+    "@angular/compiler-cli": "^17.0.7",
+    "@angular/language-service": "^17.0.7",
+    "@types/jasmine": "^5.1.4",
     "@types/node": "^18.16.2",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.6.0",
-    "jasmine-spec-reporter": "~7.0.0",
+    "jasmine-core": "^5.1.1",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-cli": "~2.0.0",
@@ -54,7 +54,7 @@
     "pretty-quick": "^3.1.3",
     "protractor": "~7.0.0",
     "tslint": "~6.1.3",
-    "typescript": "^4.9.3"
+    "typescript": "^5.2.2"
   },
   "overrides": {
     "semver": "^7.3.5"
