--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -34,12 +34,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.7",
+    "@angular-eslint/builder": "17.1.1",
+    "@angular-eslint/eslint-plugin": "17.1.1",
+    "@angular-eslint/eslint-plugin-template": "17.1.1",
+    "@angular-eslint/schematics": "17.1.1",
+    "@angular-eslint/template-parser": "17.1.1",
     "@angular/cli": "^17.0.7",
     "@angular/compiler-cli": "^17.0.7",
     "@angular/language-service": "^17.0.7",
     "@types/jasmine": "^5.1.4",
     "@types/node": "^18.16.2",
-    "codelyzer": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.13.1",
+    "eslint": "^8.54.0",
     "jasmine-core": "^5.1.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.4.2",
