Add build steps for codeql
Since there is no generated sources, this should not be necessary, but for some reason the analysis doesn't work.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -39,6 +39,16 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
+    - name: Build backend
+      run: |
+        cd train-history-backend
+        mvn clean package -e -U -B
+
+    - name: Build updater
+      run: |
+        cd train-history-updater
+        mvn clean package -e -U -B
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
